fix conteiner overflow

--- a/style/_utilities.scss
+++ b/style/_utilities.scss
@@ -1,16 +1,18 @@
 .container {
-  width: clamp(500px, 80%, 1200px);
-  margin: 30px auto;
+  max-width: $website-width;
+  padding: 1.5rem;
+  margin: auto;
+  // overflow: hidden;
 }
 
 h1 {
   font-family: $heading-font;
   text-transform: uppercase;
-  font-size: clamp(1rem, 8vw, 6rem);
+  // font-size: clamp(1rem, 8vw, 6rem);
 }
 
 h2,
 h3 {
   @extend h1;
-  font-size: clamp(0.8rem, 6vw, 4rem);
+  // font-size: clamp(0.8rem, 6vw, 4rem);
 }
