--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,5 +1,6 @@
 $main-font: 'Montserrat', sans-serif;
 $heading-font: 'Barlow Condensed', sans-serif;
+$website-width: 1280px;
 $light-color: #eee5cd;
 $dark-color: #333;
 $bg-image: url('../images/header.jpg');
