--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,13 @@
 .container {
-  width: clamp(500px, 80%, 1200px);
-  margin: 30px auto;
+  max-width: 1280px;
+  padding: 1.5rem;
+  margin: auto;
 }
 
 h1, h2,
 h3 {
   font-family: "Barlow Condensed", sans-serif;
   text-transform: uppercase;
-  font-size: clamp(1rem, 8vw, 6rem);
-}
-
-h2,
-h3 {
-  font-size: clamp(0.8rem, 6vw, 4rem);
 }
 
 * {
